--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+quarkus.http.port=8080
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.username=postgres
+quarkus.datasource.password=root
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/green_cafe
+quarkus.hibernate-orm.datasource.default-schema=cafe
 quarkus.hibernate-orm.database.generation=drop-and-create
